--- a/trunk/VerificacionDeAutenticidad/VerificacionDeAutenticidad.csproj
+++ b/trunk/VerificacionDeAutenticidad/VerificacionDeAutenticidad.csproj
@@ -78,7 +78,9 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
